force-app/main/default/objects/Monthly_Statement__c/Monthly_Statement__c.object-meta.xml
<CustomObject>
    <label>Monthly Statement</label>
    <nameField>
        <label>Monthly Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>