force-app/main/default/objects/Monthly_Statement__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Monthly Statements</relationshipLabel>
    <relationshipName>Monthly_Statements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>