force-app/main/default/objects/Monthly_Statement__c/fields/Rental_Period_From__c.field-meta.xml
<CustomField>
    <fullName>Rental_Period_From__c</fullName>
    <label>Rental Period From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>